--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -36,7 +36,7 @@
     <script src="javascripts/mySpin.js" type="text/javascript"></script>
     <script type="text/javascript" src="\appClient.js"></script>
     <script type="text/javascript" src="\controllers\appCtrl.js"></script>
-
+    <script type="text/javascript" src="\controllers\autoCtrl.js"></script>
 
 </body>
 
