--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -9,12 +9,14 @@
     <link rel="shortcut icon" href="/images/flamingo.png" />
     <link rel="stylesheet" href="/angular-material/angular-material.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="angular-jk-carousel/dist/jk-carousel.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body ng-app="myApp" ng-controller="appCtrl" layout="column" ng-init="init()">
     <md-toolbar flex="10" layout="row" layout-align="space-between center">
         <!--The left side-->
-        <span> <h2 class="md-toolbar-tools"> On One Leg </h2></span>
+        <span> <h2 class="md-toolbar-tools"> <a ui-sref="main"> On One Leg </a></h2></span>
         <!--The right side-->
         <span>
             <md-button aria-label="login" ui-sref="login"> Login </md-button>
@@ -32,6 +34,7 @@
     <script src="/angular-aria/angular-aria.min.js"></script>
     <script src="/angular-messages/angular-messages.min.js"></script>
     <script src="/angular-material/angular-material.min.js"></script>
+    <script src="angular-jk-carousel/dist/jk-carousel.js"></script>
     <script src="javascripts/spin.js" type="text/javascript"></script>
     <script src="javascripts/mySpin.js" type="text/javascript"></script>
     <script type="text/javascript" src="\appClient.js"></script>
