--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -19,6 +19,7 @@
         <span> <h2 class="md-toolbar-tools"> <a ui-sref="main"> On One Leg </a></h2></span>
         <!--The right side-->
         <span>
+            <md-button aria-label="account" ui-sref="account"> Account </md-button>
             <md-button aria-label="login" ui-sref="login"> Login </md-button>
             <md-button aria-label="signin" ui-sref="signin"> Sign in </md-button>
             <md-button aria-label="help" ui-sref="help"> Help </md-button>
